# TelephoneBookApp

./: .gitignore.txt  CMakeLists.txt
Model/: CMakeLists.txt
Model/include/: TelephoneBookModel_export.h  contact.h  contact_model.h  contact_tools_validate.h  i_contact.h  i_contact_model.h
Model/src/: contact.cpp  contact_model.cpp  contact_tools_validate.cpp
Tests/: CMakeLists.txt
Tests/contact_model_tests/: CMakeLists.txt  contact_model_tests.cpp
Tests/contact_tests/: CMakeLists.txt  contact_tests.cpp
Tests/include/: TelephoneBookModel_export.h
View/: CMakeLists.txt
View/include/: TelephoneBookView_export.h  main_window.h
View/qml/: BottomMenuContorl.qml  ContactDelegate.qml  ContactsView.qml  TopMenuControl.qml  WindowFrame.qml  main.qml  resources.qrc
View/src/: main_window.cpp
cmake.macros/: base.cmake
cmake.macros/functions/: functions.cmake
src/: application.cpp  application.h  main.cpp
